Really fixed width adaption (OVERLAPPING ERROR STILL PRESENT)

--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,8 @@ header img {
 }
 .speech.userown {
   margin-right: 10px;
-  float: right;
+  position: absolute;
+  right: 0;
 }
 .speech.otherown {
   margin-left: 10px;
